<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.RecipeDetailsActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <ImageView
        android:id="@+id/back_to_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/prev_screen"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipe_header"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/recipe_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/lora_font"
        android:text="@string/recipe"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/_25sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_29sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/rec_name"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/recipe_header"
        app:layout_constraintVertical_bias="0.102">

        <ImageView
            android:id="@+id/rec_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/rec_image"
            android:scaleType="fitXY"
            android:src="@drawable/pancakes" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/rec_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/meal_name"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/lora_font"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/ingredient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/ingredients"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:textColor="@color/or_yellow"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/rec_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/ingredient_title"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        tools:listitem="@layout/recipe_recycler"/>

    <TextView
        android:id="@+id/instruction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/instructions"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:textColor="@color/or_yellow"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/ingredients_recycler" />

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/instruction_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>